--- a/index.html
+++ b/index.html
@@ -30,39 +30,27 @@
       <main class="content">
          <h1>Lorem ipsum dolor sit amet.</h1>
          <ol>
-            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae aliquam doloribus eum ipsa
-               quibusdam
-               ullam, vitae facere nisi. Temporibus culpa quas quia porro quae, beatae eum. Repudiandae illum vel
-               excepturi
-               doloribus quia enim debitis blanditiis eius, perspiciatis officiis voluptatum unde nam id sed similique
-               minus veniam aspernatur aliquid possimus error quod libero adipisci suscipit facilis. Distinctio maiores
-               sed
-               corporis ipsa vero laborum quibusdam minus quaerat est alias, voluptatem quasi accusamus provident
-               laudantium. A, iure! Sed ab, harum laboriosam deleniti consequatur eum pariatur error quis assumenda,
-               saepe
-               maxime veniam maiores consequuntur illum eveniet minima dicta suscipit est eaque quas? Modi, ea?</li>
-            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae aliquam doloribus eum ipsa
-               quibusdam
-               ullam, vitae facere nisi. Temporibus culpa quas quia porro quae, beatae eum. Repudiandae illum vel
-               excepturi
-               doloribus quia enim debitis blanditiis eius, perspiciatis officiis voluptatum unde nam id sed similique
-               minus veniam aspernatur aliquid possimus error quod libero adipisci suscipit facilis. Distinctio maiores
-               sed
-               corporis ipsa vero laborum quibusdam minus quaerat est alias, voluptatem quasi accusamus provident
-               laudantium. A, iure! Sed ab, harum laboriosam deleniti consequatur eum pariatur error quis assumenda,
-               saepe
-               maxime veniam maiores consequuntur illum eveniet minima dicta suscipit est eaque quas? Modi, ea?</li>
-            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae aliquam doloribus eum ipsa
-               quibusdam
-               ullam, vitae facere nisi. Temporibus culpa quas quia porro quae, beatae eum. Repudiandae illum vel
-               excepturi
-               doloribus quia enim debitis blanditiis eius, perspiciatis officiis voluptatum unde nam id sed similique
-               minus veniam aspernatur aliquid possimus error quod libero adipisci suscipit facilis. Distinctio maiores
-               sed
-               corporis ipsa vero laborum quibusdam minus quaerat est alias, voluptatem quasi accusamus provident
-               laudantium. A, iure! Sed ab, harum laboriosam deleniti consequatur eum pariatur error quis assumenda,
-               saepe
-               maxime veniam maiores consequuntur illum eveniet minima dicta suscipit est eaque quas? Modi, ea?</li>
+         <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae aliquam doloribus eum ipsa quibusdam
+            ullam, vitae facere nisi. Temporibus culpa quas quia porro quae, beatae eum. Repudiandae illum vel excepturi
+            doloribus quia enim debitis blanditiis eius, perspiciatis officiis voluptatum unde nam id sed similique
+            minus veniam aspernatur aliquid possimus error quod libero adipisci suscipit facilis. Distinctio maiores sed
+            corporis ipsa vero laborum quibusdam minus quaerat est alias, voluptatem quasi accusamus provident
+            laudantium. A, iure! Sed ab, harum laboriosam deleniti consequatur eum pariatur error quis assumenda, saepe
+            maxime veniam maiores consequuntur illum eveniet minima dicta suscipit est eaque quas? Modi, ea?</li>
+         <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae aliquam doloribus eum ipsa quibusdam
+            ullam, vitae facere nisi. Temporibus culpa quas quia porro quae, beatae eum. Repudiandae illum vel excepturi
+            doloribus quia enim debitis blanditiis eius, perspiciatis officiis voluptatum unde nam id sed similique
+            minus veniam aspernatur aliquid possimus error quod libero adipisci suscipit facilis. Distinctio maiores sed
+            corporis ipsa vero laborum quibusdam minus quaerat est alias, voluptatem quasi accusamus provident
+            laudantium. A, iure! Sed ab, harum laboriosam deleniti consequatur eum pariatur error quis assumenda, saepe
+            maxime veniam maiores consequuntur illum eveniet minima dicta suscipit est eaque quas? Modi, ea?</li>
+         <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae aliquam doloribus eum ipsa quibusdam
+            ullam, vitae facere nisi. Temporibus culpa quas quia porro quae, beatae eum. Repudiandae illum vel excepturi
+            doloribus quia enim debitis blanditiis eius, perspiciatis officiis voluptatum unde nam id sed similique
+            minus veniam aspernatur aliquid possimus error quod libero adipisci suscipit facilis. Distinctio maiores sed
+            corporis ipsa vero laborum quibusdam minus quaerat est alias, voluptatem quasi accusamus provident
+            laudantium. A, iure! Sed ab, harum laboriosam deleniti consequatur eum pariatur error quis assumenda, saepe
+            maxime veniam maiores consequuntur illum eveniet minima dicta suscipit est eaque quas? Modi, ea?</li>
          </ol>
       </main>
    </div>
